[tool.poetry]
name = "youtube2mp3"
version = "0.1.0"
description = ""
authors = ["jacobcreedwatkins <jacob.c.watkins2014@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytube = "^15.0.0"
prompt-toolkit = "^3.0.39"
pytest = "^7.4.0"
moviepy = "^1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
